# lps-statusline

./: .gitignore  LICENSE  README.md  claude-usage-status  install-remote.sh  install.sh  statusline.sh  uninstall.sh
.claude/agents/: statusline-specialist.md
.claude/skills/lps-statusline/: SKILL.md
tests/: render-test.sh
usage-fetch/: pyproject.toml  requirements.txt  script.py
