[project]
name = "usage-fetch"
version = "0.1.0"
description = "Fetch Claude AI usage limits from browser cookies"
requires-python = ">=3.10"
dependencies = [
    "browser-cookie3>=0.19.0,<1.0.0",
    "cloudscraper>=1.2.71,<2.0.0",
    "requests>=2.25.0,<3.0.0",
    "secretstorage>=3.3.0,<4.0.0; sys_platform == 'linux'",
]
